--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - N8N_RUNNERS_ENABLED=true
       - DB_TYPE=postgresdb
       - DB_POSTGRESDB_HOST=${POSTGRES_CONTAINER}
-      - DB_POSTGRESDB_PORT=5432
+      - DB_POSTGRESDB_PORT=${POSTGRES_PORT}
       - DB_POSTGRESDB_DATABASE=${POSTGRES_DB}
       - DB_POSTGRESDB_USER=${POSTGRES_USER}
       - DB_POSTGRESDB_PASSWORD=${POSTGRES_PASSWORD}
@@ -27,5 +27,5 @@ services:
     user: "1000:1000"
 networks:
   default:
-    name: mynetwork
+    name: ${DOCKER_NETWORK_NAME}
     external: true
